--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="col-12" id="header">
         <h1 class="titolininav" id="nav-left" onclick="openHome()" style="cursor: pointer;">syncro</h1>
-        <img class="titolininav" id="stoptheloop" onclick="openTest()" src="./test media/STOP THE LOOP.png" style="cursor: pointer;">
+        <img class="titolininav" id="stoptheloop" onclick="openTest()" src="./test_media/STOP THE LOOP.png" style="cursor: pointer;">
     </div>
     <div class="col-12" id="welcome">
         <img id="index-stop" src="./index_media/TYPE_STOP_THE_LOOP.webp">
@@ -48,7 +48,10 @@
         </div>
         <div class="single-p-mix">
             <div class="title-container">PARTNER</div>
-            <p>L’intersezione tra i contributi di questi partner, coordinati da Syncro, dà vita a un progetto che pone il benessere personale al centro.</p>
+            <p>L’intersezione tra i contributi dei tre partner, Trenord, Headspace e Spotify, dà vita a un progetto che pone il benessere personale al centro. 
+                Tra questi, risulta fondamentale la mediazione di Syncro: al primo, fornisce il modo in cui affrontare e vivere il contesto della mobilità in 
+                linea con il proprio benessere, al secondo garantisce uno spazio in cui entrare in contatto con il target della GenZ, mentre all’ultimo offre 
+                visibilità ed ingaggio, tanto alla piattaforma in sè, quanto alle playlist.</p>
         </div>
         <img src="./index_media/index_pic_02.webp">
         <div class="single-p-mix">
@@ -67,7 +70,8 @@
         </div>
         <div class="single-p-mix">
             <div class="title-container">STRATEGIA</div>
-            <p>La nostra campagna si divide in tre fasi strategiche: interruzione, consapevolezza ed empowement.</p>
+            <p>Data la necessità di approcciare la tematica in maniera approfondita, la nostra campagna si divide in tre fasi strategiche, quali interruzione, 
+                consapevolezza ed empowerment, che guidano l’utente attraverso l’ascolto attivo di sé.</p>
             <div class="subtitle-container">INTERRUZIONE</div>
             <p>Il primo passo consiste nel rompere l'automatismo quotidiano del nostro pubblico, attirarando l’attenzione attraverso i nostri canali di comunicazione, 
                 come la come la campagna Out Of Home (OOH), il sito web e i profili Instagram e TikTok, predisponendo alla riflessione.</p>
@@ -143,7 +147,7 @@
             <p>La maggioranza degli intervistati descrive così il proprio ritmo di vita:</p>
         </div>
         <div class="single-p-mix">
-            <img class="fotine" src="i./ndex_media/index_pic_19.webp">
+            <img class="fotine" src="./index_media/index_pic_19.webp">
         </div>
         <div class="single-p-mix">
             <p>I dati evidenziano come le scelte di mobilità non siano dettate unicamente da esigenze pratiche, ma profondamente influenzate dalla 
@@ -159,21 +163,29 @@
             <div class="section-title"  id="test-section"><a><i>03.</i> TEST</a></div>
             <p>Il test RitmoType è uno strumento innovativo, composto da 16 domande a risposta multipla, progettato per aiutare le persone a esplorare i propri 
                 comportamenti quotidiani, con un focus particolare sulla mobilità.<br><br>
-                I risultati del test vengono restituiti tramite una scheda personalizzata che sintetizza le dimensioni fondamentali del profilo. 
-                La restituzione si articola nei seguenti elementi.</p>
+                I risultati del test vengono restituiti attraverso una scheda personalizzata, progettata per fornire un'analisi chiara e intuitiva delle dimensioni 
+                fondamentali del profilo. La restituzione mira a rendere i dati informativi e coinvolgenti, impiegando un linguaggio che favorisca l'identificazione 
+                e l'empatia.</p>
             <div class="subtitle-container">DIMENSIONI FONDAMENTALI</div>
-            <p>Ogni RitmoType è descritto attraverso i parametri di Vibe, Frequenza e Andamento con un linguaggio coinvolgente e intuitivo.</p>
+            <p>Ogni RitmoType è descritto attraverso tre parametri principali: Vibe, Frequenza e Andamento. La Vibe definisce il ruolo, Author, Singer, Producer e Deejay, e 
+                come questo influenzi le scelte quotidiane. La frequenza aiuta a comprendere se l’individuo tenda a ritmi più veloci o più lenti. Infine l'Andamento può essere 
+                regolare o irregolare e rappresenta la variabilità del ritmo nel tempo, evidenziando le modalità con cui si gestiscono, ad esempio, cambiamenti e imprevisti.</p>
             <div class="subtitle-container">DESCRIZIONE EVOCATIVA</div>
             <p>Inoltre, è accompagnato da una bio ispirata al mondo musicale, che sintetizza in modo originale e metaforico le caratteristiche del profilo in questione.</p>
             <div class="subtitle-container">CONNESSIONE CON LA MOBILITÀ</div>
             <p>Ciascun Ritmo è collegato a pratici consigli di vita di tutti i giorni, concentrandosi della mobilità quotidiana e offrendo così spunti di riflessione per ottimizzare i propri spostamenti.</p>
         </div>
-        <img class="fotine" src="./index_media/index_pic_20.webp">
+        <img class="fotine" src="./index_media/index_pic_195.webp">
         <div class="single-p-mix">
             <div class="subtitle-container">HIT & FLOP</div>
-            <p>In ogni profilo vengono inoltre evidenziati le cosiddette Hit (punti di forza) e i cosiddetti Flop (aspetti migliorabili), al fine di stimolare una riflessione critica e costruttiva riguardo il proprio stile di vita.</p>
+            <p>Ogni RitmoType rappresenta una combinazione unica di preferenze, comportamenti e inclinazioni legate al ritmo della vita personale e professionale. 
+                L'analisi dei cosiddetti Hit (punti di forza) e Flop (aspetti migliorabili) permette di individuare con precisione le qualità che ciascun RitmoType 
+                esprime in modo naturale, insieme agli aspetti che potrebbero limitare il benessere o l’efficacia delle scelte quotidiane.</p>
             <div class="subtitle-container">TOP FEAT.</div>
-            <p>La scheda evidenzia inoltre il Top Featuring, ovvero il RitmoType con il quali si è più affine e col quale si crea una forte sinergia collaborativa.</p>
+            <p>La scheda include suggerimenti su quali RitmoType sono più affini per creare sinergie positive e collaborazioni. Attraverso questa metodologia, 
+                i RitmoType diventano uno strumento potente sia per la comprensione individuale, ma anche e soprattutto per il miglioramento continuo, con benefici 
+                personali e relazionali.</p>
+            <img class="fotine" src="./index_media/index_pic_20.webp">
             <p><br>Con questo test, non solo si acquisisce una maggiore consapevolezza di sé, ma si apre anche la strada verso un equilibrio più autentico e soddisfacente.</p>
             <p class="fonti"><i>Nota: il test non si basa su uno studio scientifico, ma è uno strumento esplorativo che mira soltanto a stimolare una riflessione personale.</i></p>
         </div>
