--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stop The Loop</title>
-    <link rel="icon" type="image/x-icon" href="syncro favicon.png">
+    <link rel="icon" type="image/x-icon" href="./icons/syncro_favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
@@ -77,7 +77,7 @@
                 come la come la campagna Out Of Home (OOH), il sito web e i profili Instagram e TikTok, predisponendo alla riflessione.</p>
         </div>
         <div class="single-p-mix">
-            <p class="fotine-title">Banner & Poster</p>
+            <p class="fotine-title">Affissioni</p>
             <img class="fotine" src="./index_media/index_pic_04.webp">
             <img class="fotine" src="./index_media/index_pic_05.webp">
             <img class="fotine" src="./index_media/index_pic_06.webp">
@@ -95,7 +95,7 @@
         <div class="single-p-mix">
             <div class="subtitle-container">EMPOWERMENT</div>
             <p>Offre strumenti pratici e contenuti di approfondimento attraverso un canale Instagram dedicato, con consigli e spunti sul ritmo e il 
-                benessere mentale, per supportare il pubblico nella trasformazione della consapevolezza in azione concreta.</p>
+                benessere personale, per supportare il pubblico nella trasformazione della consapevolezza in azione concreta.</p>
         </div>
         <div class="single-p-mix">
             <p class="fotine-title">CONTENUTI INSTAGRAM</p>
@@ -249,8 +249,8 @@
         <h2><b>Stop The Loop</b><br>by Syncro<br>2025©<br><br><br></h2>
         <div id="icons">
             <a><img class="icon" src="./icons/ig.png" data-link="https://www.instagram.com/syncro.ritmo/" style="cursor: pointer;"></a>
-            <a><img class="icon" src="./icons/tiktok.png" data-link="https://www.instagram.com/syncro.ritmo/" style="cursor: pointer;"></a>
-            <a><img class="icon" src="./icons/spotify.png" data-link="https://www.instagram.com/syncro.ritmo/" style="cursor: pointer;"></a>
+            <a><img class="icon" src="./icons/tiktok.png" data-link="https://www.tiktok.com/@syncro.ritmo?_t=ZN-8sKEjG1gm1O&_r=1" style="cursor: pointer;"></a>
+            <a><img class="icon" src="./icons/spotify.png" data-link="https://open.spotify.com/user/i9r9kop7b1pa1q5tldv3rwjyb?si=5U0nTxBlTJ2mIUD2f1QV9Q" style="cursor: pointer;"></a>
             <a href="mailto:syncro.ritmo@gmail.com"><img class="icon" src="./icons/mail.png" style="cursor: pointer;"></a>
         </div>
     </div>
@@ -903,20 +903,20 @@
     }
 
     function openSpotify() {
-        window.open('https://open.spotify.com/intl-it/artist/2OwUh4IB8tJ5wdqoQV22Yr?si=jZCDnLoERxiMMpMSM580QA', '_blank');
+        window.open('https://open.spotify.com/user/i9r9kop7b1pa1q5tldv3rwjyb?si=5U0nTxBlTJ2mIUD2f1QV9Q', '_blank');
     }
 
 
     function openRitmario() {
-        window.open('syncroritmo.github.io/stoptheloop/ritmario.html', '_blank');
+        window.open('/ritmario.html', '_blank');
     }
 
     function openHome() {
-        window.open('syncroritmo.github.io/stoptheloop/index.html', '_blank');
+        window.open('/index.html', '_blank');
     }
 
     function openTest() {
-        window.open('syncroritmo.github.io/stoptheloop/ritmotest.html', '_blank');
+        window.open('/ritmotest.html', '_blank');
     }
 
     function downloadReport() {
