--- a/ritmotest.html
+++ b/ritmotest.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RITMO type Test</title>
-    <link rel="icon" type="image/x-icon" href="syncro favicon.png">
+    <link rel="icon" type="image/x-icon" href="./icons/syncro_favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body class="no-scroll">
     <div class="col-12" id="header">
         <h1 class="titolininav" id="nav-left">syncro</h1>
-        <img class="titolininav" id="stoptheloop" src="test media/STOP THE LOOP.png">
+        <img class="titolininav" id="stoptheloop" src="./test media/STOP THE LOOP.png">
         <nav class="burger-menu">
             <div class="nav-container">
                 <input class="checkbox" type="checkbox" id="menu-toggle" />
@@ -17,9 +20,9 @@
                     <div class="menu-button"></div>
                 </div>
                 <div class="paroline">
-                    <a href="landing.html">Home</a>
-                    <a href="ritmario.html">RitmoType</a>
-                    <a href="ritmotest.html">Test</a>
+                    <a href="/landing.html">Home</a>
+                    <a href="/ritmario.html">RitmoType</a>
+                    <a href="/ritmotest.html">Test</a>
                 </div>
             </div>
         </nav>
@@ -426,14 +429,14 @@
     }
 
     .intro-background {
-        background-image: url('test media/test_start_bg.png'); /* Immagine per intro-container */
+        background-image: url('./test media/test_start_bg.png'); /* Immagine per intro-container */
         background-size: cover; /* Copre l'intera area */
         background-position: center; /* Centra l'immagine */
         background-repeat: no-repeat; /* Evita ripetizioni */
     }
 
     .quiz-background {
-        background-image: url('test media/test bg.png'); /* Immagine per quiz-container */
+        background-image: url('./test media/test bg.png'); /* Immagine per quiz-container */
         background-size: 100% auto; /* Larghezza 100%, altezza proporzionale */
         background-position: bottom; /* Allinea in basso */
         background-repeat: no-repeat; /* Evita ripetizioni */
