--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
     }
 
     function openTest() {
-        window.open('https://github.com/syncroritmo/stoptheloop/blob/1927c5fbba1075820d90d28fa6d758d159de1ffe/ritmotest.html', '_blank');
+        window.open('https://syncroritmo.github.io/stoptheloop/ritmotest.html', '_blank');
     }
 
     function downloadReport() {
