--- a/ritmotest.html
+++ b/ritmotest.html
@@ -12,7 +12,7 @@
 <body class="no-scroll">
     <div class="col-12" id="header">
         <h1 class="titolininav" id="nav-left">syncro</h1>
-        <img class="titolininav" id="stoptheloop" src="./test media/STOP THE LOOP.png">
+        <img class="titolininav" id="stoptheloop" src="./test_media/STOP THE LOOP.png">
         <nav class="burger-menu">
             <div class="nav-container">
                 <input class="checkbox" type="checkbox" id="menu-toggle" />
@@ -429,14 +429,14 @@
     }
 
     .intro-background {
-        background-image: url('./test media/test_start_bg.png'); /* Immagine per intro-container */
+        background-image: url('./test_media/test_start_bg.png'); /* Immagine per intro-container */
         background-size: cover; /* Copre l'intera area */
         background-position: center; /* Centra l'immagine */
         background-repeat: no-repeat; /* Evita ripetizioni */
     }
 
     .quiz-background {
-        background-image: url('./test media/test bg.png'); /* Immagine per quiz-container */
+        background-image: url('./test_media/test bg.png'); /* Immagine per quiz-container */
         background-size: 100% auto; /* Larghezza 100%, altezza proporzionale */
         background-position: bottom; /* Allinea in basso */
         background-repeat: no-repeat; /* Evita ripetizioni */
