--- a/thesolo.html
+++ b/thesolo.html
@@ -720,24 +720,24 @@
 
 
     function openRitmario() {
-        window.open('ritmario.html', '_blank');
+        window.open('https://syncroritmo.github.io/stoptheloop/ritmario.html', '_blank');
     }
 
     function openHome() {
-        window.open('landing.html', '_blank');
+        window.open('https://syncroritmo.github.io/stoptheloop/index.html', '_blank');
     }
 
     function openTest() {
-        window.open('ritmotest.html', '_blank');
+        window.open('https://syncroritmo.github.io/stoptheloop/ritmotest.html', '_blank');
     }
 
     function downloadPdf() {
-        const newTab = window.open('ritmotypes_download/The Solo.pdf', '_blank'); // Apre il PDF in una nuova scheda
+        const newTab = window.open('./ritmotypes_download/The Solo.pdf', '_blank'); // Apre il PDF in una nuova scheda
         newTab.focus();
     }
 
     function downloadSocial() {
-        const newTab = window.open('ritmotypes_download/The Solo.png', '_blank'); // Apre il PDF in una nuova scheda
+        const newTab = window.open('./ritmotypes_download/The Solo.png', '_blank'); // Apre il PDF in una nuova scheda
         newTab.focus();
     }
 
