--- a/theadlib.html
+++ b/theadlib.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Drop</title>
+    <title>The Ad-lib</title>
     <link rel="icon" type="image/x-icon" href="./icons/syncro_favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +15,11 @@
     </div>
     <div class="col-12" id="welcome">
         <h1 id="ritmotype-res">RITMO<br><i>type</i></h1>
-        <h1 class="ritmotype-title singer"><i>the </i>DROP </h1>
+        <h1 class="ritmotype-title singer"><i>the </i>AD-LIB </h1>
         <div id="stats">
             <div class="stat-cont">
                 <a><i>vibe</i></a>
-                <a>SOCIALITÀ</a>
+                <a>INDIPENDENZA</a>
             </div>
             <div class="stat-cont">
                 <a><i>frequenza</i></a>
@@ -27,59 +27,56 @@
             </div>
             <div class="stat-cont">
                 <a><i>andamento</i></a>
-                <a>VELOCE</a>
+                <a>LENTO</a>
             </div>
         </div>
-        <img id="ritmotype-img1" src="./ritmotypes_assets/thedrop_1.webp" alt="The VERSE">
+        <img id="ritmotype-img1" src="./ritmotypes_assets/theadlib_1.webp" alt="The Flow">
     </div>
     <div class="col-3" id="nave">
-        <img src="./ritmotypes_assets/thedrop_2.webp">
+        <img src="./ritmotypes_assets/theadlib_2.webp">
     </div>
     <div class="col-6" id="content">
         <div class="spacer" id="project-section"></div>
         <div class="single-p-mix">
             <div class="title-container singer">BIO</div>
-            <p>Come il drop in una canzone, è l’energia che scuote ogni ambiente e cattura l’attenzione. Rappresenta 
-                una personalità sociale, vivace e imprevedibile. Tutti lo notano: la sua presenza è un'esplosione. 
-                Sei il main character di ogni situazione, portando entusiasmo a chi ti circonda</p>
+            <p>Come l'ad-lib che impreziosisce una performance musicale, è spontaneo, unico e creativo. 
+                Inaspettato e brillante, questo RitmoType si distingue per la sua capacità di trovare soluzioni 
+                fuori dagli schemi. Il suo ritmo irregolare riflette una mente vivace e indipendente.</p>
         </div>
         <div class="single-p-mix">
-            <div class="title-container singer">RUOLO: DEEJAY</div>
-            <p>Vivono per connettersi e condividere. Proprio come sul dancefloor, mixano le emozioni e creano condivisione. Portano il loro spirito esplosivo nella socialità quotidiana.</p>
-            <img src="./ritmotypes_assets/thedrop_3.webp">
+            <div class="title-container singer">RUOLO: SINGER</div>
+            <p>Affrontano il mondo con grande unicità e autonomia.<br>Il loro ritmo riflette in pieno l'espressione personale che rende ogni loro esperienza su misura.</p>
+            <img src="./ritmotypes_assets/theadlib_3.webp">
         </div>
         <div class="single-p-mix">
             <div class="title-container singer">MOBILITà</div>
-            <p>Potrebbe preferire cambiare direzione all'improvviso, passando da un tipo di trasporto 
-                all'altro a seconda dell'umore o delle necessità. Potrebbe preferire viaggi in gruppo, 
-                in modo che la sua presenza si faccia sentire.</p>
+            <p>In mobilità, The Ad-lib ama le soluzioni alternative e imprevedibili. Potrebbe scegliere di camminare o di prendere una strada meno battuta, evitando la routine e seguendo il momento.</p>
         </div>
         <div class="dual-p-mix">
             <div id="dual-left">
                 <div class="title-container singer">TOP FEAT.</div>
-                <p>Si completa perfettamente con The Key, dove la sua carica di energia irregolare trova ordine e direzione. 
-                    La stabilità di The Key rende vostri momenti ancora più memorabili.
-                </p>
+                <p>Crea una dinamica sorprendente con The Sync, dove la spontaneità dell’Ad-lib trovano un ritmo naturale nella grande precisione del Sync. Questo equilibrio dona vitalità e struttura al movimento.</p>
             </div>
             <div id="dual-right">
-                <img src="./ritmotypes_assets/thedrop_4.webp">
+                <img src="./ritmotypes_assets/theadlib_4.webp">
             </div>
         </div>
         <div class="dual-p-mix">
             <div id="dual-left">
                 <div class="title-container singer">HIT</div>
                 <ul>
-                    <li>Estremamente carismatico, illumina ogni ambiente con la sua energia.</li>
-                    <li>Creativo e imprevedibile, porta sempre qualcosa di nuovo.</li>
-                    <li>Sa come rompere la monotonia, creando momenti memorabili.</li>
+                    <li>Creativo e originale.</li>
+                    <li>Flessibile e capace di 
+                        adattarsi a ogni situazione.</li>
+                    <li>Sempre pronto a sorprendere.</li>
                 </ul>
             </div>
             <div id="dual-right">
                 <div class="title-container singer">FLOP</div>
                 <ul>
-                    <li>L'intensità della sua energia può esaurirsi velocemente.</li>
-                    <li>Può avere difficoltà nel mantenere una continuità</li>
-                    <li>A volte risulta essere troppo impulsivo.</li>
+                    <li>Poco costante, fatica a mantenere un ritmo stabile.</li>
+                    <li>Talvolta dispersivo, rischia di perdere il focus.</li>
+                    <li>Può risultare difficile da seguire per chi cerca regolarità.</li>
                 </ul>
             </div>
         </div>
@@ -89,10 +86,10 @@
             <div class="dual-p-mix" id="stoplist">
                 <div id="dual-left">
                     <div class="title-container singer">STOPLIST</div>
-                    <p>Ecco la StopList di The Drop, la playlist che unisce la tua musica a questo RitmoType, creando momenti per ritrovare te stesso.</p>
+                    <p>Ecco a te la StopList di The Ad-lib, la playlist che unisce la tua musica a questo RitmoType, creando momenti per ritrovare te stesso.</p>
                 </div>
                 <div id="stoplist-img">
-                    <img src="./ritmotypes_assets/thedrop_5.png" alt="">
+                    <img src="./ritmotypes_assets/theadlib_5.png" alt="">
                 </div>
             </div>
             <div class="btn-container">
@@ -231,7 +228,7 @@
     }
 
     .singer{
-        color: #FFA631;
+        color: #FF6CA8;
     }
 
     #stats{
@@ -247,7 +244,7 @@
 
     .stat-cont{
         width: 15vw;
-        color: #FFA631;
+        color: #FF6CA8;
         font-size: 1.4vw;
         text-align: center;
 
@@ -495,13 +492,13 @@
     .btn-down{
         width: 20vw;
         color: white;
-        background-color: #FFA631;
-        border-color: #FFA631;
+        background-color: #FF6CA8;
+        border-color: #FF6CA8;
     }
 
     .btn-down:hover {
         background: black;
-        color: #FFA631;
+        color: #FF6CA8;
         transition: 50ms linear;
     }
 
@@ -590,6 +587,7 @@
 
         .stat-cont {
             width: 100%;
+            color: #FF6CA8;
             font-size: 6.4vw;
             text-align: center;
             display: flex;
@@ -718,7 +716,7 @@
     }
 
     function openSpotify() {
-        window.open('https://open.spotify.com/playlist/4o3Sd2MbB8U80ALbBIW3wJ?si=b398ac7157e14477', '_blank');
+        window.open('https://open.spotify.com/playlist/63oumMD3Xplezy8Qv6Hbl6?si=aa4b918c1df24c66', '_blank');
     }
 
 
@@ -735,12 +733,12 @@
     }
 
     function downloadPdf() {
-        const newTab = window.open('./ritmotypes_download/The DROP.pdf', '_blank'); // Apre il PDF in una nuova scheda
+        const newTab = window.open('./ritmotypes_download/The AD-LIB.pdf', '_blank'); // Apre il PDF in una nuova scheda
         newTab.focus();
     }
 
     function downloadSocial() {
-        const newTab = window.open('./ritmotypes_download/The Drop.png', '_blank'); // Apre il PDF in una nuova scheda
+        const newTab = window.open('./ritmotypes_download/The Ad-Lib.png', '_blank'); // Apre il PDF in una nuova scheda
         newTab.focus();
     }
 
