--- a/thesolo.html
+++ b/thesolo.html
@@ -125,7 +125,7 @@
     <div class="spacer" id="project-section"></div>
     <div class="col-12" id="footer">
         <div class="col-12">
-            <h3>Laboratorio di Sintesi Finale C2<br>
+            <h3>Stop The Loop - Syncro / Laboratorio di Sintesi Finale C2<br>
                 Corso di L. M. in Design della Comunicazione - Politecnico di Milano.<br>
                 Docenti: M. Ciancia, K. Goldoni, F. Piredda,  M. Ronchi.<br>
                 Tutor: S. Barozzi, G. Carbone, V. Dal Brun, S. Dall'Angelo.</h3>
@@ -715,7 +715,7 @@
     }
 
     function openSpotify() {
-        window.open('https://open.spotify.com/intl-it/artist/2OwUh4IB8tJ5wdqoQV22Yr?si=jZCDnLoERxiMMpMSM580QA', '_blank');
+        window.open('https://open.spotify.com/playlist/6wMp8ewBzMQTBXFL2oCiIE?si=81ce463aca4345c8', '_blank');
     }
 
 
