--- a/index.html
+++ b/index.html
@@ -908,11 +908,11 @@
 
 
     function openRitmario() {
-        window.open('/ritmario.html', '_blank');
+        window.open('https://syncroritmo.github.io/stoptheloop/ritmario.html', '_blank');
     }
 
     function openHome() {
-        window.open('/index.html', '_blank');
+        window.open('https://syncroritmo.github.io/stoptheloop/index.html', '_blank');
     }
 
     function openTest() {
