--- a/ritmario.html
+++ b/ritmario.html
@@ -250,6 +250,8 @@
                 test rappresenta effettivamente il ritmo più adatto alle proprie esigenze. Studiate per favorire un processo di interiorizzazione del proprio 
                 RitmoType, gli Stop The Loop offrono inoltre l’opportunità di esplorare potenziali alternative di ritmo.
             </p>
+        </div>
+        <div class="single-p-mix">
             <img class="fotine" src="./ritmario_media/RITMOPIC_19.webp">
             <div class="download-container">
                 <div class="btn-container">
