--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 e mettere in discussione schemi di vita dettati da convenzioni sociali.</p>
         </div>
         <div class="video-container">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/boGmSZG7cQQ?si=tuo6okydz6u3fDar" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/m-Nkq7l-P0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"></iframe>
         </div>
         <div class="single-p-mix">
             <div class="title-container">PARTNER</div>
@@ -94,6 +94,10 @@
         <div class="single-p-mix">
             <div class="subtitle-container">CONSAPEVOLEZZA</div>
             <p>Durante la quale il test RytmoType aiuta a scoprire il proprio ritmo e a riflettere sulle scelte quotidiane legate alla mobilità.</p>
+        </div>
+        <div class="single-p-mix">
+            <p class="fotine-title">TEST RITMOTYPE</p>
+            <img class="fotine" src="./index_media/index_pic_26.webp">
         </div>
         <div class="single-p-mix">
             <div class="subtitle-container">EMPOWERMENT</div>
